fix: css on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,14 +35,15 @@ body {
 .content {
   display: block;
   margin: 0 auto;
-  padding: 1em;
-  font-size: 1.5em;
+  padding: 2em 1em;
+  font-size: 2em;
+
 }
 
-@media screen and (min-width: 60em ) {
+@media screen and (min-width: 70em) {
   .content {
     padding: 5em;
-    font-size: 1.15em;
+    font-size: 1.25em;
   }
 }
 
